turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:3: error: not found: value length
	for (i<-0 to length.Array-1)
                     ^